# firecore-audio-lib

./: Cargo.toml
src/: music.rs  serialized.rs  sound.rs
