[package]
name = "firecore-audio-lib"
version = "0.1.1"
authors = ["Rhys Holloway <rhyswilliamholloway@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
file = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }